@@ -1,4 +1,4 @@
-$Id: changelog,v 1.37 2007/05/01 09:57:30 alfred Exp $
+$Id: changelog,v 1.38 2007/09/24 17:53:01 alfred Exp $
 ------------------------------------------------------------------------------
 v1.41r3 Aenderungen: (-->v1.41r4beta)
 
@@ -1094,3 +1094,7 @@ v1.41r8 Aenderungen: (-->v1.42beta)
 - Addition    : add BANKSEL pseudo instruction for PIC16C8x
 
 - Addition    : add optional new integer syntax
+
+2007-09-24 [Bld56]
+
+- Bugfix      : correct handling of minus operator in nested expressions
